--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title>生まれて何日</title>
+  <meta charset="UTF-8"　/>
+  <title>生まれて何日？</title>
   <link rel="stylesheet" href="default.css">
 </head>
 <body>
@@ -11,7 +13,7 @@
       <input type="number" id="year" name="year" value=2000>年
       <input type="number" id="month" name="month" value=1 min=1 max=12>月
       <input type="number" id="day" name="day" value=1 min=1 max=31>日
-      <input type="submit" value="この日が私の誕生日です">
+      <input type="submit" value="Submit">
     </form>
   </div>
 
